[SD-260 SD-261] fix large desktop position and fix clicable arrows on tablet

--- a/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
@@ -38,6 +38,7 @@
       @mixin arrow {
         top: 0;
         width: 15%;
+        z-index: 1;
         @include media-breakpoint-up(xl) {
           width: auto;
         }
